Introduce a basic theme

--- a/less/site.less
+++ b/less/site.less
@@ -1,3 +1,4 @@
+@import "theme";
 @import "ui/navigation";
 @import "ui/welcome";
 @import "ui/about";
@@ -5,3 +6,17 @@
 @import "ui/showcase";
 @import "ui/contact";
 @import "ui/print";
+
+body {
+  background-color: @dark;
+  color: @light;
+  font-family: @serif;
+  font-size: 14pt;
+  line-height: 1.75rem;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: @sans-serif;
+  font-weight: @bold;
+  line-height: 2rem;
+}
