--- a/less/ui/navigation.less
+++ b/less/ui/navigation.less
@@ -1,62 +1,142 @@
 @import "../theme";
-@color-normal: @dim;
+
+.navbar-button() {
+  background: none;
+  outline: none;
+  border: none;
+  border-radius: 0;
+  width: 3rem;
+  height: 3rem;
+  float: right;
+  display: block;
+  margin-top: .25rem;
+  margin-left: 0.4rem;
+}
 
 .dropdown {
+  outline: none !important;
+  border: none !important;
   margin: 0 !important;
   padding: 0 !important;
+  border-radius: 0 !important;
 
   .dropdown-menu {
-    text-align: right;
-    border-radius: 0;
-    margin-bottom: 0;
-    padding: 0 !important;
+    padding: 0;
+    background-color: @dark;
+    color: @light;
+    border: none;
 
     .dropdown-item {
-      margin: 0 !important;
-      padding: 0.5rem 1rem !important;
+      text-align: right;
+      margin: 0;
+      padding: 0;
+
+      span {
+        line-height: 1.25rem;
+        display: inline-block;
+        padding: 1rem;
+      }
+
+      i {
+        display: inline-block;
+        margin-left: .5em;
+      }
     }
   }
 }
 
+.dropdown-toggle::after {
+  margin: 0;
+  border: none;
+}
 
 #navigation {
   font-family: @sans-serif;
+  margin-bottom: 2rem;
 
   .navbar {
+    background-color: @dark;
+    display: block;
+    font-size: 1.25rem;
+    border-bottom: dashed 1px lighten(@dark, 10%);
+    margin-bottom: 3rem;
+
+    .navbar-brand,
+    .navbar-toggler,
+    .navbar-print {
+      color: @light;
+      font-size: 1.5rem;
+    }
+
+    .navbar-brand .first-part {
+      font-weight: @bold;
+    }
+
+    .navbar-print {
+      .navbar-button();
+      position: relative;
+
+      i {
+        position: absolute;
+        top: 25%;
+        left: 20%;
+      }
+    }
+
+    .navbar-toggler {
+      .navbar-button();
+    }
+
+    .nav-link, .dropdown-item {
+      span {
+        padding: .5em;
+        display: inline-block;
+      }
+    }
+
+    .dropdown-item {
+      span {
+        margin-bottom: 0.5rem;
+      }
+    }
+
     .nav-item {
       text-align: right;
-      padding-right: 1em;
+      line-height: 1.25rem;
 
-      &.dropdown-menu.show {
-        margin: 0;
-        border:solid 1px red;
+      i {
+        display: inline-block;
+        margin-left: .5em;
       }
     }
   }
 
   .quick-nav {
+    padding: 0;
+
     ul {
       padding: 0;
+      width: 100%;
+      display: flex;
 
       li {
-        display: inline-block;
-        margin-right: 0.5em;
-        font-size: 2em;
-        border: solid 3px @color-normal;
-        width: 2em;
-        height: 2em;
-        border-radius: 50%;
-        position: relative;
+        list-style: none;
+        margin-right: 1.25rem;
 
         a {
-          width: 100%;
-          height: 100%;
           display: inline-block;
-        }
+          border: solid 3px @light;
+          color: @light;
+          width: 5rem;
+          height: 5rem;
+          position: relative;
+          padding: 1rem;
+          border-radius: 50%;
+          cursor: pointer;
 
-        i {
-          position: absolute;
-          color: @color-normal;
+          i {
+            position: absolute;
+          }
         }
       }
     }
