--- a/less/ui/welcome.less
+++ b/less/ui/welcome.less
@@ -10,7 +10,14 @@
 
   .quick-nav {
     li.welcome {
-      .quick-nav(@color-welcome, 20%, 23%);
+      .quick-nav(@color-welcome, 30%, 30%);
     }
+  }
+}
+
+#welcome.panel {
+  h1 {
+    font-size: 6rem;
+    line-height: 10rem;
   }
 }
