--- a/less/site.less
+++ b/less/site.less
@@ -18,5 +18,9 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: @sans-serif;
   font-weight: @bold;
-  line-height: 2rem;
+  line-height: 3.5rem;
+}
+
+p {
+  margin-bottom: 3.25rem;
 }
