Add content to the about panel

--- a/less/theme.less
+++ b/less/theme.less
@@ -159,7 +159,7 @@
     border-color: @bg;
     outline-color: @bg;
     box-shadow: none;
-    font-weight:bold;
+    font-weight: bold;
     padding: .35rem .2rem;
 
     &:hover {
@@ -182,7 +182,7 @@
   margin: 8px 24px 8px 8px;
 
   &:focus,
-  &:active
+  &:active,
   &:active:focus {
     box-shadow: none;
   }
