--- a/less/ui/navigation.less
+++ b/less/ui/navigation.less
@@ -15,7 +15,6 @@
 
 .dropdown {
   outline: none !important;
-  border: none !important;
   margin: 0 !important;
   padding: 0 !important;
   border-radius: 0 !important;
@@ -59,7 +58,9 @@
     display: block;
     font-size: 1.25rem;
     border-bottom: dashed 1px lighten(@dark, 10%);
+    outline: solid 10px @dark;
     margin-bottom: 3rem;
+    padding: 0;
 
     .navbar-brand,
     .navbar-toggler,
@@ -101,6 +102,35 @@
     }
 
     .nav-item {
+      border-top: solid 1px lighten(@dark, 4%);
+
+      &.print {
+        padding-right: 1.45rem;
+        cursor: pointer;
+      }
+
+      &:last-child {
+        height: 0;
+        position: relative;
+        border-top: none;
+        border-bottom: solid 5px @accent;
+
+        .nav-link {
+          i { display: none; }
+        }
+
+        &::after {
+          @width: 30px;
+          border-top: solid @width @accent;
+          border-left: solid @width transparent;
+          border-right: solid @width transparent;
+          border-bottom: solid @width transparent;
+          content: "";
+          position: absolute;
+          left: 50%;
+          top: 0;
+        }
+      }
       text-align: right;
       line-height: 1.25rem;
 
