--- a/less/site.less
+++ b/less/site.less
@@ -24,3 +24,12 @@ h1, h2, h3, h4, h5, h6 {
 p {
   margin-bottom: 3.25rem;
 }
+
+.tag {
+  border-radius: 0.25rem;
+  margin: 0.25rem 0.25rem;
+  padding: 0 0.35rem;
+  font-size: 2rem;
+  line-height: 2.5rem;
+  display: inline-block;
+}
