--- a/less/ui/navigation.less
+++ b/less/ui/navigation.less
@@ -154,19 +154,7 @@
         margin-right: 1.25rem;
 
         a {
-          display: inline-block;
-          border: solid 3px @light;
-          color: @light;
-          width: 5rem;
-          height: 5rem;
-          position: relative;
-          padding: 1rem;
-          border-radius: 50%;
-          cursor: pointer;
-
-          i {
-            position: absolute;
-          }
+          .icon();
         }
       }
     }
