Add content to the contact panel

--- a/less/ui/contact.less
+++ b/less/ui/contact.less
@@ -14,3 +14,71 @@
     }
   }
 }
+
+#contact {
+  .icons a {
+    .icon();
+    color: @light;
+    margin-right: 1.25rem;
+    margin-top: 3rem;
+
+    &.twitter {
+      &:hover {
+        background-color: #1da1f2;
+        color: @dark;
+      }
+
+      i {
+        left: 27%;
+        top: 27%;
+      }
+    }
+
+    &.github {
+      &:hover {
+        background-color: #fff;
+        color: @dark;
+      }
+
+      i {
+        top: 25%;
+        left: 28%;
+      }
+    }
+
+    &.linkedin {
+      &:hover {
+        background-color: #0177b5;
+        color: @light;
+      }
+
+      i {
+        top: 25%;
+        left: 30%;
+      }
+    }
+
+    &.blog {
+      &:hover {
+        background-color: #f4804a;
+        color: @dark;
+      }
+
+      i {
+        top: 25%;
+        left: 32%;
+      }
+    }
+
+    &.email {
+      &:hover {
+        background-color: #cc0000;
+      }
+
+      i {
+        top: 25%;
+        left: 27%;
+      }
+    }
+  }
+}
