--- a/less/ui/career.less
+++ b/less/ui/career.less
@@ -9,14 +9,18 @@
 @color-career-dstv: #028ed2;
 @color-career-cloudafrica: #c2463a;
 
-.career-spec(@color, @top, @left) {
-  p {
-    margin: 1rem;
-  }
-
-  h2, a {
+.spec(@color, @top, @left) {
+  h2 {
     color: @color;
-    font-weight: @bold;
+  }
+  h3 {
+    a {
+      color: @light;
+    }
+  }
+  a {
+    color: @color;
+    font-weight: bold;
   }
 
   .tag {
@@ -26,14 +30,74 @@
 
   .icon {
     .icon();
-    cursor: default;
+    color: @color;
     border-color: @color;
 
     i {
-      color: @color;
       top: @top;
       left: @left;
     }
+  }
+}
+
+.expander(@color) {
+  .expander {
+    &:hover {
+      color: @color;
+
+      i {
+        background-color: @color;
+      }
+    }
+  }
+}
+
+.spec {
+  margin-top: 1rem;
+  background-color: darken(@dark, 5%);
+  border-radius: 2.5rem;
+  padding: 3rem;
+
+  h2 {
+    cursor: pointer;
+  }
+
+  .icon {
+    overflow:hidden;
+    position: relative;
+    float: right;
+  }
+
+  .duration {
+    font-size: 1.25rem;
+  }
+
+  .description {
+    display: none;
+    margin-left: -1rem;
+
+    &.show {
+      display: block;
+    }
+  }
+}
+
+.expander {
+  cursor: pointer;
+  vertical-align: middle;
+  font-size: 1.25rem;
+
+  .label {
+    font-family: @sans-serif;
+  }
+
+  i {
+    display: inline-block;
+    padding: .25rem;
+    margin-right: .5rem;
+    background-color: @light;
+    border-radius: .25rem;
+    color: @dark;
   }
 }
 
@@ -54,94 +118,34 @@
 #career.panel {
   margin-bottom: 2rem;
   position: relative;
-
-  .expander {
-    cursor: pointer;
-    vertical-align: middle;
-    font-size: 1.25rem;
-
-    .label {
-      font-family: @sans-serif;
-    }
-
-    i {
-      display: inline-block;
-      padding: .25rem;
-      margin-right: .5rem;
-      background-color: @light;
-      border-radius: .25rem;
-      color: @dark;
-    }
-
-    &:hover {
-      color: @color-career;
-
-      i {
-        background-color: @color-career;
-      }
-    }
-  }
-
-  .spec {
-    margin-top: 1em;
-    background-color: darken(@dark, 5%);
-    border-radius: 2.5rem;
-    padding: 1em;
-
-    h2 {
-      cursor: pointer;
-    }
-
-    .icon {
-      overflow: hidden;
-      position: relative;
-      float: right;
-    }
-
-    .duration {
-      font-size: 1.25rem;
-    }
-
-    .blurb {
-      margin-left: -1rem;
-    }
-
-    .description {
-      display: none;
-      margin-left: -1rem;
-
-      &.show {
-        display: block;
-      }
-    }
-  }
+  .expander(@color-career);
 
   .cti {
     @color: #cc0000;
     @top: 25%;
     @left: 32%;
-    .career-spec(@color-career-cti, @top, @left);
+    .spec(@color-career-cti, @top, @left);
   }
 
   .globres {
     @color: #0000cc;
     @top: 28%;
-    @left: 26%;
-    .career-spec(@color-career-globres, @top, @left);
+    @left: 25%;
+    .spec(@color-career-globres, @top, @left);
   }
 
   .it-em {
     @color: #0000cc;
     @top: 28%;
-    @left: 26%;
-    .career-spec(@color-career-it-em, @top, @left);
+    @left: 30%;
+    .spec(@color-career-it-em, @top, @left);
   }
 
   .remata {
     @color: #0000cc;
     @top: 28%;
-    @left: 26%;
-    .career-spec(@color-career-remata, @top, @left);
+    @left: 30%;
+    .spec(@color-career-remata, @top, @left);
 
     .tag {
       color: @dark;
@@ -151,21 +155,55 @@
   .britehouse {
     @color: #0000cc;
     @top: 28%;
-    @left: 26%;
-    .career-spec(@color-career-britehouse, @top, @left);
+    @left: 32%;
+    .spec(@color-career-britehouse, @top, @left);
   }
 
   .dstv {
     @color: #0000cc;
     @top: 28%;
-    @left: 26%;
-    .career-spec(@color-career-dstv, @top, @left);
+    @left: 31%;
+    .spec(@color-career-dstv, @top, @left);
   }
 
   .cloudafrica {
     @color: #0000cc;
     @top: 28%;
-    @left: 26%;
-    .career-spec(@color-career-cloudafrica, @top, @left);
+    @left: 29%;
+    .spec(@color-career-cloudafrica, @top, @left);
+  }
+}
+
+#qualifications.panel {
+  .expander(@color-qualifications);
+
+  .spec {
+    @top: 25%;
+    @left: 25%;
+    .spec(@color-qualifications, @top, @left);
+
+    i.fa-book-reader {
+      left: 30%;
+    }
+  }
+
+  .tag {
+    background-color: @color-qualifications;
+    color: @dark;
+  }
+}
+
+#blogs.panel {
+  .expander(@color-blogs);
+
+  .spec {
+    @top: 25%;
+    @left: 35%;
+    .spec(@color-blogs, @top, @left);
+  }
+
+  .tag {
+    background-color: @color-blogs;
+    color: @dark;
   }
 }
