Change quick nav theme

--- a/less/theme.less
+++ b/less/theme.less
@@ -9,10 +9,10 @@
 @mask: #097acf;
 
 @color-welcome: #E53935;
-@color-about: #D81B60;
-@color-career: #FF5722;
+@color-about: #FBC02D;
+@color-career: #9C27B0;
 @color-contact: #039BE5;
-@color-print: #FBC02D;
+@color-print: #C51162;
 @color-showcase: #CDDC39;
 
 @color-technologies: #EF5350;
