Add content to the public speaking panel

--- a/less/ui/career.less
+++ b/less/ui/career.less
@@ -205,6 +205,12 @@
   .panel(@color-podcasts, @dark, @top, @left);
 }
 
+#public-speaking.panel {
+  @top: 28%;
+  @left: 28%;
+  .panel(@color-public-speaking, @dark, @top, @left);
+}
+
 #blogs.panel {
   @top: 25%;
   @left: 35%;
