Add content to the community panel

--- a/less/ui/career.less
+++ b/less/ui/career.less
@@ -216,3 +216,9 @@
   @left: 35%;
   .panel(@color-blogs, @dark, @top, @left);
 }
+
+#community.panel {
+  @top: 25%;
+  @left: 25%;
+  .panel(@color-community, @dark, @top, @left);
+}
