Add content to the projects panel

--- a/less/ui/career.less
+++ b/less/ui/career.less
@@ -217,6 +217,12 @@
   .panel(@color-blogs, @dark, @top, @left);
 }
 
+#projects.panel {
+  @top: 25%;
+  @left: 25%;
+  .panel(@color-projects, @dark, @top, @left);
+}
+
 #community.panel {
   @top: 25%;
   @left: 25%;
