Apply print styles with minor adjustments to content panels for it to work

--- a/less/site.less
+++ b/less/site.less
@@ -1,4 +1,5 @@
 @import "theme";
+@import "ui/structure";
 @import "ui/navigation";
 @import "ui/welcome";
 @import "ui/about";
@@ -6,30 +7,3 @@
 @import "ui/showcase";
 @import "ui/contact";
 @import "ui/print";
-
-body {
-  background-color: @dark;
-  color: @light;
-  font-family: @serif;
-  font-size: 24pt;
-  line-height: 3.5rem;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: @sans-serif;
-  font-weight: @bold;
-  line-height: 3.5rem;
-}
-
-p {
-  margin-bottom: 3.25rem;
-}
-
-.tag {
-  border-radius: 0.25rem;
-  margin: 0.25rem 0.25rem;
-  padding: 0 0.35rem;
-  font-size: 2rem;
-  line-height: 2.5rem;
-  display: inline-block;
-}
