--- a/less/ui/contact.less
+++ b/less/ui/contact.less
@@ -22,6 +22,10 @@
     margin-right: 1.25rem;
     margin-top: 3rem;
 
+    @media print {
+      color: @dark;
+    }
+
     &.twitter {
       &:hover {
         background-color: #1da1f2;
@@ -79,6 +83,28 @@
         top: 25%;
         left: 27%;
       }
+    }
+
+    @media print {
+      display: block;
+      border: none;
+      margin: 0;
+
+      &::after {
+        margin-left: 3.5rem;
+      }
+    }
+  }
+
+  .qrcode {
+    display: block;
+    width: 300px;
+    height: 300px;
+    border: solid 10px darken(@dark, 5%);
+    margin-top: 3rem;
+
+    @media print {
+      border: none;
     }
   }
 }
