Move less directory to resources

--- a/resources/less/ui/showcase.less
+++ b/resources/less/ui/showcase.less
@@ -49,6 +49,7 @@
       width: 5rem;
       display: inline-block;
       margin-bottom: 1.5rem;
+      margin-right: 1.5rem;
 
       @media print {
         margin: 1rem;
@@ -59,7 +60,7 @@
   .more {
     .btn();
     .btn-normal(@dark, @color-technologies);
-    margin-top: -8px;
+    margin-top: -0.5px;
     outline-offset: 0;
 
     @media print {
