--- a/resources/less/theme.less
+++ b/resources/less/theme.less
@@ -12,7 +12,7 @@
 @color-about: #FBC02D;
 @color-career: #9C27B0;
 @color-contact: #039BE5;
-@color-print: #C51162;
+@color-resume: #C51162;
 @color-showcase: #CDDC39;
 
 @color-technologies: #EF5350;
