--- a/resources/less/ui/navigation.less
+++ b/resources/less/ui/navigation.less
@@ -99,6 +99,14 @@
       .navbar-button();
     }
 
+    .navbar-nav {
+      background-color: @dark;
+      position: fixed;
+      right: 0;
+      padding: 0 2rem 1rem 1rem;
+      margin-top: 1rem;
+    }
+
     .nav-link, .dropdown-item {
       span {
         padding: .5em;
