--- a/resources/less/ui/navigation.less
+++ b/resources/less/ui/navigation.less
@@ -1,4 +1,5 @@
 @import "../theme";
+@color-navbar: darken(@dark, 2%);
 
 .navbar-button() {
   outline: none;
@@ -63,7 +64,7 @@
   }
 
   .navbar {
-    background-color: @dark;
+    background-color: @color-navbar;
     display: block;
     font-size: 1.25rem;
     border-bottom: 10px solid #9a9c16;
@@ -104,7 +105,7 @@
     }
 
     .navbar-nav {
-      background-color: @dark;
+      background-color: @color-navbar;
       position: fixed;
       right: 0;
       padding: 0 2rem 1rem 1rem;
@@ -112,6 +113,8 @@
     }
 
     .nav-link, .dropdown-item {
+      background-color: @color-navbar;
+
       span {
         padding: .5em;
         display: inline-block;
